concord_macros/tests/trybuild/fail/sema/policy/invalid_expose_secret_refs.stderr
error: secret exposure methods are not allowed in public policy expressions
  --> tests/trybuild/fail/sema/policy/invalid_expose_secret_refs.rs:12:39
   |
12 |             "X-Trace" = vars.trace_id.expose()
   |                                       ^^^^^^

error: secret exposure methods are not allowed in public policy expressions
  --> tests/trybuild/fail/sema/policy/invalid_expose_secret_refs.rs:26:35
   |
26 |             trace = vars.trace_id.expose_secret()
   |                                   ^^^^^^^^^^^^^
